testdata/baselines/reference/submodule/compiler/javascriptImportDefaultBadExport.errors.txt
/a.js(2,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
/b.js(1,8): error TS1192: Module '"/a"' has no default export.


==== /a.js (1 errors) ====
    const alias = {};
    module.exports = alias;
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    
==== /b.js (1 errors) ====
    import a from "./a";
           ~
!!! error TS1192: Module '"/a"' has no default export.
    